projects/nextcloud/manifests/netpol.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-cnpg-kubeapi
  namespace: nextcloud
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/podRole: instance
  egress:
  - toEntities:
    - kube-apiserver
  - toPorts:
    - ports:
      - port: "6443"
        protocol: TCP
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: nextcloud-db
